<resources>
    <string name="app_name">计算器</string>
    <string name="减号">-</string>
    <string name="乘号">*</string>
    <string name="除号">/</string>
    <string name="退格">←</string>
    <string name="全清">AC</string>
    <string name="加号">+</string>
    <string name="等号">=</string>
    <string name="百分号">%</string>
    <string name="小数点">.</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_2">2</string>
    <string name="textview">TextView</string>
    <string name="_1">1</string>
</resources>
